Sugati/src/objects/CSS_Styler__c.object
<CustomObject>
    <fields>
        <fullName>Backgroundcolor__c</fullName>
        <label>Backgroundcolor</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Button_CSS__c</fullName>
        <label>Button CSS</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Button__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSS__c</fullName>
        <label>CSS</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CS_Address_Marker__c</fullName>
        <label>Address Marker</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Button_JSON__c</fullName>
        <label>Button JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CS_Itinerary_Page_Marker__c</fullName>
        <label>Itinerary Page Marker</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Travelling_Country_Marker__c</fullName>
        <label>Travelling Country Marker</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Font_Color__c</fullName>
        <label>Email Font Color</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Font_Family__c</fullName>
        <label>Email Font-Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Font_Size__c</fullName>
        <label>Email Font-Size</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Font_Style__c</fullName>
        <label>Email Font Style</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Font_Family__c</fullName>
        <label>Font-Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Size__c</fullName>
        <label>Font-Size</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Style__c</fullName>
        <label>Font-Style</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H1color__c</fullName>
        <label>H1color</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H2color__c</fullName>
        <label>H2color</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H3color__c</fullName>
        <label>H3color</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Header_Color__c</fullName>
        <label>Header-Color</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Header_Font_Style__c</fullName>
        <label>Header-Font-Style</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Header_Font_size__c</fullName>
        <label>Header-Font-size</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hr_Background__c</fullName>
        <label>Hr-Background</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hr_Height__c</fullName>
        <label>Hr-Height</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Summary_Section_Logo_Url__c</fullName>
        <label>Summary Section Logo Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Table_Backgroundcolor__c</fullName>
        <label>Table Backgroundcolor</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Table_Border_Color__c</fullName>
        <label>Table Border Color</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Table_Font_Family__c</fullName>
        <label>Table Font-Family</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Table_Font_Size__c</fullName>
        <label>Table Font-Size</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Table_Font_Style__c</fullName>
        <label>Table Font-Style</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Table_Footer_Backgroundcolor__c</fullName>
        <label>Table Footer Backgroundcolor</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Table_Footer_Text_Color__c</fullName>
        <label>Table Footer Text Color</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Table_Header_Backgroundcolor__c</fullName>
        <label>Table Header Backgroundcolor</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Table_Header_Text_Color__c</fullName>
        <label>Table Header Text Color</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Table__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Table</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Typography__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Typography</label>
        <type>Checkbox</type>
    </fields>
    <label>CSS Styler</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Is_Active__c</columns>
        <columns>Backgroundcolor__c</columns>
        <columns>Font_Size__c</columns>
        <columns>Font_Style__c</columns>
        <columns>H1color__c</columns>
        <columns>H2color__c</columns>
        <columns>H3color__c</columns>
        <columns>H4color__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CSS Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CSS Stylers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>